--- a/index.html
+++ b/index.html
@@ -10,14 +10,17 @@
     <title>Memory</title>
 </head>
 <body>
+    <!-- titolo pagina -->
     <header>
-        MEMORY GAME
+        memory game
     </header>
+    <!-- /titolo pagina -->
 
+    <!-- sezione carte -->
     <main>
         <div class="carta">
-            <p>Air Baloon</p>
             <img src="img/noun_air_balloon_3134741.png" alt="">
+            <p>Air Baloon</p>
         </div>
         <div class="carta">
             <img src="img/noun_Bicycle_3134821.png" alt="">
@@ -35,7 +38,7 @@
             <img src="img/noun_Tram_3134750.png" alt="">
             <p>Tram</p>
         </div>
-        <div class="carta">
+        <div class="carta attiva">
             <img src="img/noun_Submarine_3134738.png" alt="">
             <p>Submarine</p>
         </div>
@@ -64,9 +67,12 @@
             <p>Submarine</p>
         </div>
     </main>
+    <!-- /sezione carte -->
 
+    <!-- fine pagina -->
     <footer>
         from Team Boolean
     </footer>
+    <!-- /fine pagina -->
 </body>
 </html>
